Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
   inputs:
     command: 'custom'
     workingDir: '$(build.artifactstagingdirectory)/Templates'
+    verbose: false
     customCommand: 'install --production'
 
 - task: ArchiveFiles@2
