--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,9 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.SourceDirectory)'
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
     includeRootFolder: false
+
 
 - task: PublishBuildArtifacts@1
   inputs:
