--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,34 +4,13 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- task: CopyFiles@2
-  displayName: 'Copy files to $(build.artifactstagingdirectory)/Templates'
-  inputs:
-    SourceFolder: 'deployment'
-    Contents: '*.json'
-    TargetFolder: '$(build.artifactstagingdirectory)/Templates'
-
+steps: 
 - task: Npm@1
   inputs:
     command: 'custom'
-    verbose: false
-    customCommand: 'install --production'
-
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+    customCommand: 'install-custom'
 
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
 
 
 
