--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,10 @@ steps:
     customCommand: 'install --production'
 - script: |
     npm install
+    npm test
+  displayName: 'Run unit tests'
+  continueOnError: true
+  
 
 
 
